# magicwand

./: .gitignore  CLAUDE.md  README.md  config.toml  magicwand.service  pyproject.toml
captures/: history.jsonl
docs/: capture-history-spec.md  gesture-segmentation-spec.md  homebridge-integration.md  implementation-plan.md  phase1-spec.md  phase2-spec.md  phase3-spec.md  phase4-spec.md  phase5-spec.md  phase6-spec.md  phase7-spec.md  phase8-spec.md
gestures/: lumos.json  oculis.json  oculus.json
src/magicwand/: actions.py  camera.py  captures.py  config.py  detection.py  events.py  gestures.py  homebridge.py  main.py  matching.py  recorder.py
src/magicwand/web/: routes.py  stream.py  ws.py
src/magicwand/web/static/css/: style.css
src/magicwand/web/static/js/: captures.js  events.js  gesture-detail.js  gestures.js  settings.js  train.js
src/magicwand/web/templates/: base.html  captures.html  gesture-detail.html  gestures.html  index.html  settings.html  train.html
tests/: conftest.py
tests/e2e/: test_actions_api.py  test_captures_api.py  test_detection_overlay.py  test_events_api.py  test_gestures_api.py  test_matching_api.py  test_settings.py  test_stream.py  test_training_ui.py
tests/unit/: test_actions.py  test_camera.py  test_captures.py  test_config.py  test_detection.py  test_dwell_trim.py  test_events.py  test_gestures.py  test_matching.py  test_recorder.py  test_segmentation.py
